Setup build system for java 8 and java 11 with shadow and boot jar